// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Should render the component 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    sulu_admin.forgot_password
  </div>
  <form
    class="form"
  >
    <fieldset>
      <label
        class="inputField"
      >
        <div
          class="labelText"
        >
          sulu_admin.username_or_email
        </div>
        <div
          class="input default left"
        >
          <div
            class="prependedContainer default"
          >
            <span
              aria-label="su-user"
              class="su-user icon default"
            />
          </div>
          <input
            autocomplete="username"
            type="text"
            value=""
          />
        </div>
      </label>
      <div
        class="buttons"
      >
        <button
          class="button link hasText"
          type="button"
        >
          <span
            class="buttonText"
          >
            sulu_admin.back_to_login
          </span>
        </button>
        <button
          class="button primary hasText"
          disabled=""
          type="submit"
        >
          <span
            class="buttonText"
          >
            sulu_admin.reset
          </span>
        </button>
      </div>
    </fieldset>
  </form>
</DocumentFragment>
`;

exports[`Should render the component loading 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    sulu_admin.forgot_password
  </div>
  <form
    class="form"
  >
    <fieldset>
      <label
        class="inputField"
      >
        <div
          class="labelText"
        >
          sulu_admin.username_or_email
        </div>
        <div
          class="input default left"
        >
          <div
            class="prependedContainer default"
          >
            <span
              aria-label="su-user"
              class="su-user icon default"
            />
          </div>
          <input
            autocomplete="username"
            type="text"
            value=""
          />
        </div>
      </label>
      <div
        class="buttons"
      >
        <button
          class="button link hasText"
          type="button"
        >
          <span
            class="buttonText"
          >
            sulu_admin.back_to_login
          </span>
        </button>
        <button
          class="button primary hasText"
          disabled=""
          type="submit"
        >
          <span
            class="buttonText"
          >
            sulu_admin.reset
          </span>
        </button>
      </div>
    </fieldset>
  </form>
</DocumentFragment>
`;

exports[`Should render the component with success 1`] = `
<DocumentFragment>
  <div
    class="header small"
  >
    sulu_admin.forgot_password_success
  </div>
  <form
    class="form"
  >
    <fieldset>
      <label
        class="inputField"
      >
        <div
          class="labelText"
        >
          sulu_admin.username_or_email
        </div>
        <div
          class="input default left"
        >
          <div
            class="prependedContainer default"
          >
            <span
              aria-label="su-user"
              class="su-user icon default"
            />
          </div>
          <input
            autocomplete="username"
            type="text"
            value=""
          />
        </div>
      </label>
      <div
        class="buttons"
      >
        <button
          class="button link hasText"
          type="button"
        >
          <span
            class="buttonText"
          >
            sulu_admin.back_to_login
          </span>
        </button>
        <button
          class="button primary hasText"
          disabled=""
          type="submit"
        >
          <span
            class="buttonText"
          >
            sulu_admin.reset_resend
          </span>
        </button>
      </div>
    </fieldset>
  </form>
</DocumentFragment>
`;
